# quality-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_quality_agent.py  run_tcagent.py  setup.sh
quality_agent/: __init__.py  cache.py  excel_exporter.py  formatters.py  local_runtime.py  models.py  ollama_client.py  service.py  vault.py
tcagent/: __init__.py  cli.py  prompt.py  vault.py
tests/: test_cache.py  test_excel_exporter.py  test_local_runtime.py  test_ollama_client.py  test_runner.py  test_service.py  test_vault.py
vault/: secrets.b64
