[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-agent"
version = "0.1.0"
description = "quality-agent V1: Ollama-backed local test case generation with local caching."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rachit Baid" }]
dependencies = ["mlx>=0.20.0; platform_system == 'Darwin' and platform_machine == 'arm64'"]

[project.scripts]
quality-agent = "quality_agent.cli:main"
quality-agent-vault = "quality_agent.vault:main"

[tool.setuptools.packages.find]
include = ["quality_agent*"]
